--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta name="google-site-verification" content="TpchdOlCDTp3TWAlOzLv8CeyPEqGv3vktq18GSm-xjE" />
     <meta charset="UTF-8">
     <title>Eric's Writing</title>
     <style>
