--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta name="google-site-verification" content="TpchdOlCDTp3TWAlOzLv8CeyPEqGv3vktq18GSm-xjE" />
+    <meta name="openai-domain-verification=dv-koWVHBIWwVOkw0xXekHJC1On" />
     <meta charset="UTF-8">
     <title>Eric's Writing</title>
     <style>
